--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  link="#008000"
  vlink="#12232"
  Alink="#50c878">
- <A HREF="https://vk.com/cunrei">страница</A>
+ <A HREF="https://vk.com/cunrei"> <center><hl>страница</hl></center> </A>
  <center><hl>Бла бла бла бла бла, вот фото</hl></center> 
  <center><i>бла бла бла бла бла бла бла бла бла</i></center>
  <img src="kingofdurka.jpg">
