--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body background="1.jpg"
  link="#008000"
- vlink="#12232"
+ vlink="#fff44f"
  Alink="#50c878">
  <center><hl><A HREF="https://vk.com/cunrei"> страница </A></hl></center>
  <center><hl>Бла бла бла бла бла, вот фото</hl></center> 
