--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  Alink="#50c878">
  <center><hl><A HREF="https://vk.com/cunrei"> страница </A></hl></center>
  <center><hl>Бла бла бла бла бла, вот фото</hl></center> 
- <strong><center><i>бла бла бла бла бла бла бла бла бла</i></center> </strong>
+ <center><i><strong>бла бла бла бла бла бла бла бла бла</strong></i></center> 
  <img src="kingofdurka.jpg">
  <center><i> бла бла бла бла бла</i></center>
  <center><i> бла бла бла бла бла</i></center>
