--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  vlink="#fff44f"
  Alink="#50c878">
  <center><hl><A HREF="https://vk.com/cunrei"> страница </A></hl></center>
- <center><hl>Бла бла бла бла бла, вот фото</hl></center> 
+ <center><hl><em>Бла бла бла бла бла, вот фото</em></hl></center> 
  <center><i><strong>бла бла бла бла бла бла бла бла бла</strong></i></center> 
  <img src="kingofdurka.jpg">
  <center><i> бла бла бла бла бла</i></center>
