--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
  <center><hl><em>Бла бла бла бла бла, вот фото</em></hl></center> 
  <center><i><strong>бла бла бла бла бла бла бла бла бла</strong></i></center> 
  <img src="kingofdurka.jpg">
- <center><i> бла бла бла бла бла</i></center>
- <center><i> бла бла бла бла бла</i></center>
- <center><i> бла бла бла бла бла</i></center>
- <center><i> бла бла бла бла бла</i></center>
+ <center><i>Сайт сделан мною</i></center>
+ <center><i> Автор: Я</i></center>
+ <center><i> Код: я</i></center>
+ <center><i> Дизайн: я</i></center>
 </body>
 
 </html/>
