--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
  vlink="#fff44f"
  Alink="#50c878">
  <center><hl><A HREF="https://vk.com/cunrei"> страница </A></hl></center>
- <center><hl><em>Бла бла бла бла бла, вот фото</em></hl></center> 
- <center><i><strong>бла бла бла бла бла бла бла бла бла</strong></i></center> 
+ <center><hl><em>На фото я.</em></hl></center> 
+ <center><i><strong>Не нравиться сайт, уходите.</strong></i></center> 
  <img src="kingofdurka.jpg">
- <center><i>Сайт сделан мною</i></center>
- <center><i> Автор: Я</i></center>
- <center><i> Код: я</i></center>
- <center><i> Дизайн: я</i></center>
+ <center><i>Сайт сделал: Я.</i></center>
+ <center><i> Автор: Я.</i></center>
+ <center><i> Код: Я.</i></center>
+ <center><i> Дизайн: Я.</i></center>
 </body>
 
 </html/>
